manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spin-deck
spec:
  rules:
    - host: "spinnaker.local"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: spin-deck
                port: 
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spin-gate
spec:
  rules:
    - host: "spinnaker.api.local"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: spin-gate
                port: 
                  number: 80
